<resources>
    <string name="app_name">Bullseye</string>
    <string name="instruction_text">HIT THE BULLSEYE AS CLOSE AS YOU CAN</string>
    <string name="random_score_text">19</string>
    <string name="min_valuetarget_text">1</string>
    <string name="max_value_target_text">100</string>
    <string name="hit_me_button">Hit Me</string>


    <string name="result_dialog_title_right">CONGRATS!!!</string>
    <string name="result_dialog_message_right">BULLSEYE!!! \n Your score is %1$d</string>
    <string name="result_dialog_button_text_right">Awesome</string>

    <string name="result_dialog_title_wrong">BAAAAAAD</string>
    <string name="result_dialog_message_wrong">YOU MISSED!!!\nThe your guess was %1$d. \nYour score is %2$d</string>
    <string name="result_dialog_button_text_wrong">Try Again</string>
</resources>