<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"/>

    <TextView
        android:id="@+id/targetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/random_score_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tagetValueNumber"
        app:layout_constraintEnd_toEndOf="@+id/titleText"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />


    <TextView
        android:id="@+id/minValueTargetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/min_valuetarget_text"
        app:layout_constraintBottom_toBottomOf="@+id/tagetValueNumber"
        app:layout_constraintEnd_toStartOf="@+id/tagetValueNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tagetValueNumber" />

    <SeekBar
        android:id="@+id/tagetValueNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/maxValueTargetText"
        app:layout_constraintStart_toEndOf="@+id/minValueTargetText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/maxValueTargetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/max_value_target_text"
        app:layout_constraintBottom_toBottomOf="@+id/tagetValueNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tagetValueNumber"
        app:layout_constraintTop_toTopOf="@+id/tagetValueNumber" />

    <Button
        android:id="@+id/hitMeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hit_me_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagetValueNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>

